added system tray and settings interface

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
           </a>
         </li>
         <li>
-          <a>
+          <a  href="settings.html">
             <span class="icon is-small">
               <i class="fa-solid fa-gear"></i></span>
             <span>Settings</span>
@@ -116,6 +116,8 @@
           </div>
   
       </section>
+
+      
     </div>
 
     <script src="render.js"></script>
