--- a/src/settings.html
+++ b/src/settings.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="C:\Users\User\Documents\GitHub\PrayerApp\prayerapp\node_modules\bulma-switch-control\css\main.css">
     <link rel="stylesheet" href="C:\Users\User\Documents\GitHub\PrayerApp\prayerapp\node_modules\bulma-checkbox\css\main.css">
     <link rel="stylesheet" href="C:\Users\User\Documents\GitHub\PrayerApp\prayerapp\node_modules\bulma-radio\css\main.css">
+    <link rel="stylesheet" href="C:\Users\User\Documents\GitHub\PrayerApp\prayerapp\node_modules\@creativebulma\bulma-divider\dist\bulma-divider.css">
     <script src="https://kit.fontawesome.com/9abe29d3f9.js" crossorigin="anonymous"></script>
 
 
@@ -85,8 +86,7 @@
             </p>
           </div>
         </div>
-      </section>
-      
+      </section>   
       <section class="section py-1">
         <span class="icon-text">
           <span class="icon">
