Changed Build System to electron-build, and started working on Notifications

--- a/src/settings.html
+++ b/src/settings.html
@@ -129,6 +129,7 @@
                 <span class="check"></span>
                 <span class="control-label">Run on startup</span>
               </label>
+              <span class="px-6" id="testStartup"></span>
             </div>
             <div class="column">
               <label class="b-checkbox checkbox">
