Added Adhan for prayer

--- a/src/settings.html
+++ b/src/settings.html
@@ -105,9 +105,9 @@
             </div>
             <div class="column">
               <label class="switch is-rounded">
-                <input type="checkbox" value="false" checked="" id="">
+                <input type="checkbox" value="false" checked="" id="adhan">
                 <span class="check"></span>
-                <span class="control-label px-4">Notifications</span>
+                <span class="control-label px-4">Adhan Sound</span>
               </label>
             </div>
           </div>
