Removed Menu Bar, cleaned code

--- a/src/settings.html
+++ b/src/settings.html
@@ -17,6 +17,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Arabic:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 
 
   </head>
@@ -173,7 +174,7 @@
         </div>
       </section>
     </div>
-
+    
     <script src="renderSet.js"></script>
   </body>
 </html>
