--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <title>Prayer Time</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.0/css/bulma.min.css">
     <link rel="stylesheet" href="C:\Users\User\Documents\GitHub\PrayerApp\prayerapp\node_modules\@creativebulma\bulma-divider\dist\bulma-divider.min.css">
-
+    <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/9abe29d3f9.js" crossorigin="anonymous"></script>
 
 
