Added Info menu in Settings, added random quotes in homepage.

--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
             </div>
             
             <div class="column is-6">
-              <p class="">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus modi aspernatur atque. Dolore accusamus, corporis qui in, ad labore odio praesentium suscipit hic nihil possimus ipsam iste ut! Repellendus, soluta.</p>
+              <p id="textOfDay" class="">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus modi aspernatur atque. Dolore accusamus, corporis qui in, ad labore odio praesentium suscipit hic nihil possimus ipsam iste ut! Repellendus, soluta.</p>
               
             </div>
           </div>
@@ -89,7 +89,7 @@
             <div class="column">
               <div class="card py-0 px-0 mx-0 my-0 is-shadowless">
                 <div class="card-content px-0 py-0">
-                  <div class="notification">
+                  <div id="fajrCard" class="notification">
                     <p class="title is-primary">Fajr</p>
                     <p id="fajr" class="subtitle ">Time: [00:00]</p>
                   </div>
@@ -99,7 +99,7 @@
             <div class="column">
               <div class="card py-0 px-0 mx-0 my-0 is-shadowless">
                 <div class="card-content px-0 py-0">
-                  <div class="notification">
+                  <div id="duhrCard" class="notification">
                     <p class="title">Duhr</p>
                     <p id="dhuhr" class="subtitle">Time: [00:00]</p>
 
@@ -110,7 +110,7 @@
             <div class="column">
               <div class="card py-0 px-0 mx-0 my-0 is-shadowless">
                 <div class="card-content px-0 py-0">
-                  <div class="notification">
+                  <div id="asrCard" class="notification">
                     <p class="title">Asr</p>
                     <p id="asr" class="subtitle">Time: [00:00]</p>
                   </div>
@@ -120,7 +120,7 @@
             <div class="column">
               <div class="card py-0 px-0 mx-0 my-0 is-shadowless">
                 <div class="card-content px-0 py-0">
-                  <div class="notification">
+                  <div id="maghribCard" class="notification">
                     <p class="title">Maghreb</p>
                     <p id="maghrib" class="subtitle">Time: [00:00]</p>
                   </div>
@@ -130,7 +130,7 @@
             <div class="column">
               <div class="card py-0 px-0 mx-0 my-0 is-shadowless">
                 <div class="card-content px-0 py-0">
-                  <div class="notification">
+                  <div id="ishaCard" class="notification">
                     <p class="title">Isha</p>
                     <p id="isha" class="subtitle">Time: [00:00]</p>
                   </div>
