--- a/src/settings.html
+++ b/src/settings.html
@@ -88,6 +88,7 @@
           </div>
         </div>
       </section>   
+      <hr>
       <section class="section py-1">
         <span class="icon-text">
           <span class="icon">
@@ -169,6 +170,39 @@
                 <span class="check"></span>
                 <span class="control-label">Light</span>
               </label>
+            </div>
+          </div>
+        </div>
+      </section>
+      <hr>
+      <section class="section py-1">
+        <span class="icon-text">
+          <span class="icon">
+            <i class="fa-solid fa-circle-info"></i>
+          </span>
+          <span class="pl-1">Info & Credits:</span>
+        </span>
+        <div class="field ml-5 py-5">
+          <div class="columns is-flex-direction-column">
+            <div class="column">
+              <p class="buttons">
+                <button id="github" class="button">
+                  <span class="icon">
+                    <i class="fab fa-github"></i>
+                  </span>
+                  <span>GitHub</span>
+                </button>
+                <button id="discord" class="button">
+                  <span class="icon">
+                    <i class="fab fa-discord"></i>
+                  </span>
+                  <span>Discord</span>
+                </button>
+              </p>
+            </div>
+            <div class="column">
+              <span class="has-text-weight-semibold">Version:</span>
+              <span> 1.0.0</span>
             </div>
           </div>
         </div>
