--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Prayer Time</title>
+    <title>PrayerTimes</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.0/css/bulma.min.css">
     <link rel="stylesheet" href="C:\Users\User\Documents\GitHub\PrayerApp\prayerapp\node_modules\@creativebulma\bulma-divider\dist\bulma-divider.min.css">
     <link rel="stylesheet" href="styles.css">
