Fixed Post-release bugs

--- a/src/settings.html
+++ b/src/settings.html
@@ -7,10 +7,10 @@
     <title>PrayerTimes</title>
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.0/css/bulma.min.css">
-    <link rel="stylesheet" href="C:\Users\User\Documents\GitHub\PrayerApp\prayerapp\node_modules\bulma-switch-control\css\main.css">
-    <link rel="stylesheet" href="C:\Users\User\Documents\GitHub\PrayerApp\prayerapp\node_modules\bulma-checkbox\css\main.css">
-    <link rel="stylesheet" href="C:\Users\User\Documents\GitHub\PrayerApp\prayerapp\node_modules\bulma-radio\css\main.css">
-    <link rel="stylesheet" href="C:\Users\User\Documents\GitHub\PrayerApp\prayerapp\node_modules\@creativebulma\bulma-divider\dist\bulma-divider.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma-switch-control@1.2.2/css/main.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma-checkbox@1.2.1/css/main.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma-radio@1.2.0/css/main.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@creativebulma/bulma-divider@1.1.0/dist/bulma-divider.min.css">
     <script src="https://kit.fontawesome.com/9abe29d3f9.js" crossorigin="anonymous"></script>
 
 
