--- a/src/settings.html
+++ b/src/settings.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>PrayerTimes</title>
+    <title>PrayerTime</title>
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.0/css/bulma.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma-switch-control@1.2.2/css/main.min.css">
@@ -202,7 +202,7 @@
             </div>
             <div class="column">
               <span class="has-text-weight-semibold">Version:</span>
-              <span> 1.0.2</span>
+              <span> 1.0.3</span>
             </div>
           </div>
         </div>
