--- a/src/settings.html
+++ b/src/settings.html
@@ -183,7 +183,7 @@
           <span class="pl-1">Info & Credits:</span>
         </span>
         <div class="field ml-5 py-5">
-          <div class="columns is-flex-direction-column">
+          <div class="columns is-flex-direction-column is-gap">
             <div class="column">
               <p class="buttons">
                 <button id="github" class="button">
@@ -200,9 +200,17 @@
                 </button>
               </p>
             </div>
+            <div class="column py-1">
+              <span class="has-text-weight-semibold">Developed by:</span>
+              <span> Kren1ch</span>
+            </div>
+            <div class="column pb-3 pt-0"> 
+              <span class="has-text-weight-semibold">Prayer times:</span>
+              <span>  Islamic Society of North America</span>
+            </div>
             <div class="column">
-              <span class="has-text-weight-semibold">Version:</span>
-              <span> 1.0.3</span>
+              <span class="has-text-weight-semibold">App Version:</span>
+              <span> 1.0.4</span>
             </div>
           </div>
         </div>
